--- a/util/CMakeLists.txt
+++ b/util/CMakeLists.txt
@@ -74,6 +74,8 @@ target_link_libraries(kenlm_util ${Boost_LIBRARIES} ${READ_COMPRESSED_LIBS} ${TH
 AddExes(EXES probing_hash_table_benchmark
         LIBRARIES kenlm_util ${Boost_LIBRARIES} ${THREADS})
 
+install(TARGETS kenlm_util DESTINATION lib)
+
 # Only compile and run unit tests if tests should be run
 if(BUILD_TESTING)
   set(KENLM_BOOST_TESTS_LIST
